# sylvain-kube

./: README.md  docker-compose.yaml
.github/workflows/: build-api.yaml  build-push-action.yaml  build-webapp.yaml  build.yaml  ci-api.yaml  ci-db.yaml  ci-webapp.yaml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  package.json  spin.toml
api/src/: index.ts  lib.rs
api/src/config/: database.ts
api/src/controllers/: alcohol.controller.ts
api/src/handlers/: index.rs  item.rs  mod.rs
api/src/routes/: alcohol.routes.ts  index.routes.ts
db/: Dockerfile  initdb-script.sql
kube/api/: deploy.yaml  hpa.yaml  netpol.yaml  secret.yaml  svc.yaml
kube/db/: deploy.yaml  initialization-configmap.yaml  netpol.yaml  pvc.yaml  secret.yaml  svc.yaml
kube/webapp/: deploy.yaml  hpa.yaml  netpol.yaml  svc.yaml
webapp/: Dockerfile  next.config.mjs  package-lock.json  package.json
webapp/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
webapp/src/components/: layout.tsx
webapp/src/components/forms/: alcohol.tsx
webapp/src/pages/: index.tsx
webapp/src/pages/alcohols/: alcohol.css  index.tsx
webapp/src/pages/random/: index.tsx
webapp/src/services/: alcohol.tsx
